minor fix in titlte

--- a/notebooks/experiments/01_basic_ingest.ipynb
+++ b/notebooks/experiments/01_basic_ingest.ipynb
@@ -5,7 +5,7 @@
    "id": "fd4f18da-3e86-4129-aa31-6575fbc87303",
    "metadata": {},
    "source": [
-    "# Basic: Inget\n",
+    "# Basic: Ingest\n",
     "\n",
     "* Ingest Pipeline:\n",
     "    * Simple PDF parsing\n",
